# dr-serialize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.defs/: vocab.html
.github/workflows/: ci.yml  pages.yml  release.yml
docs/superpowers/plans/: 2026-07-08-serializer-instance-refactor.md
docs/superpowers/specs/: 2026-07-08-serializer-instance-refactor-design.md
src/dr_serialize/: __init__.py  _encoding.py  canonical.py  errors.py  hashing.py  identity.py  jsonable.py  limits.py  serialization.py
tests/: support.py  test_canonical.py  test_handler_registration.py  test_hashing.py  test_identity.py  test_serialization.py
tests/fixtures/: hashing_golden.json  identity_golden.json
